--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,103 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
+:root {
+	--nunito-sans: "Nunito", sans-serif;
+	--open-sans: "Open Sans", sans-serif;
+
+	--accent-light: #fbb731;
+	--accent-dark: #f37335;
+	--dark: #443737;
+	--light: #ffffff;
+}
+
 body {
-	font-family: "Nunito", sans-serif;
-	/* font-family: "Open Sans", sans-serif; */
+	font-family: var(--nunito-sans);
+}
+
+.container {
+	width: 100%;
+	max-width: 1180px;
+	margin: 0 auto;
+	padding: 0 15px;
+}
+
+.header {
+	display: flex;
+	align-items: center;
+	gap: 196px;
+	padding: 26px 0;
+}
+
+.logo {
+	display: block;
+	width: 176px;
+	height: 56px;
+	background-image: url(../img/logo/logo.svg);
+	background-repeat: no-repeat;
+	background-size: contain;
+}
+
+.nav {
+	flex-grow: 1;
+	display: flex;
+	gap: 46px;
+}
+
+.nav-link {
+	color: var(--dark);
+	text-decoration: none;
+	font-weight: 600;
+	font-size: 20px;
+	line-height: 1.2;
+	font-family: var(--open-sans);
+}
+
+/* .nav-link::after {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 3px;
+	background-color: transparent;
+	border-radius: 1.5px;
+} */
+
+.nav-link:hover::after {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 3px;
+	background-color: var(--accent-light);
+	border-radius: 1.5px;
+}
+
+.cart {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+	color: var(--dark);
+	text-decoration: none;
+	font-size: 15px;
+	font-weight: 700;
+}
+
+.cart::before {
+	content: "";
+	display: block;
+	background-image: url(../img/icon/shopping-cart.svg);
+	background-repeat: no-repeat;
+	background-size: contain;
+	width: 30px;
+	height: 26px;
+}
+
+.cart-count {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 17px;
+	height: 17px;
+	border-radius: 50%;
+	background-color: var(--accent-dark);
+	color: var(--light);
+	font-size: 10px;
 }
