--- a/css/style.css
+++ b/css/style.css
@@ -52,14 +52,14 @@ body {
 	font-family: var(--open-sans);
 }
 
-/* .nav-link::after {
+.nav-link::after {
 	content: "";
 	display: block;
 	width: 100%;
 	height: 3px;
 	background-color: transparent;
 	border-radius: 1.5px;
-} */
+}
 
 .nav-link:hover::after {
 	content: "";
