--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
+a {
+	text-decoration: none;
+}
+
 :root {
 	--nunito-sans: "Nunito", sans-serif;
 	--open-sans: "Open Sans", sans-serif;
@@ -8,10 +12,10 @@
 	--accent-dark: #f37335;
 	--dark: #443737;
 	--light: #ffffff;
+	--light-rgb: 255, 255, 255;
 }
-
 body {
-	font-family: var(--nunito-sans);
+	font-family: var(--open-sans);
 }
 
 .container {
@@ -20,6 +24,8 @@ body {
 	margin: 0 auto;
 	padding: 0 15px;
 }
+
+/* Header */
 
 .header {
 	display: flex;
@@ -45,11 +51,9 @@ body {
 
 .nav-link {
 	color: var(--dark);
-	text-decoration: none;
 	font-weight: 600;
 	font-size: 20px;
 	line-height: 1.2;
-	font-family: var(--open-sans);
 }
 
 .nav-link::after {
@@ -75,9 +79,9 @@ body {
 	align-items: center;
 	gap: 10px;
 	color: var(--dark);
-	text-decoration: none;
 	font-size: 15px;
 	font-weight: 700;
+	position: relative;
 }
 
 .cart::before {
@@ -100,4 +104,67 @@ body {
 	background-color: var(--accent-dark);
 	color: var(--light);
 	font-size: 10px;
+	position: absolute;
+	left: 17px;
+	bottom: 0;
+}
+
+/* Hero */
+
+.hero {
+	background-image: url(../img/hero.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+	text-align: center;
+	padding: 142px 0;
+}
+.container {
+}
+
+.breadcrumbs {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	list-style-type: none;
+	gap: 16px;
+	padding-left: 0;
+	color: rgba(var(--light-rgb), 0.5);
+	font-size: 15px;
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+.hero-title {
+	color: var(--light);
+	font-family: var(--nunito-sans);
+	font-size: 79px;
+	font-weight: 700;
+	text-transform: capitalize;
+}
+
+.hero-description {
+	color: rgba(var(--light-rgb), 0.8);
+	font-size: 15px;
+	line-height: 1.6;
+	max-width: 320px;
+	margin: 0 auto;
+}
+
+.breadcrumbs-item {
+	position: relative;
+}
+
+.breadcrumbs-item:not(:last-child)::after {
+	content: "/";
+	position: absolute;
+	right: -12px;
+}
+
+.breadcrumbs-link {
+	color: rgba(var(--light-rgb), 0.5);
+}
+
+.breadcrumbs-link:hover {
+	color: var(--accent-light);
 }
