--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ a {
 	text-decoration: none;
 }
 
+button {
+	border: none;
+}
+
 :root {
 	--nunito-sans: "Nunito", sans-serif;
 	--open-sans: "Open Sans", sans-serif;
@@ -28,6 +32,10 @@ body {
 /* Header */
 
 .header {
+	border-bottom: 1px solid #dedede;
+}
+
+.header-wrapper {
 	display: flex;
 	align-items: center;
 	gap: 196px;
@@ -46,7 +54,7 @@ body {
 .nav {
 	flex-grow: 1;
 	display: flex;
-	gap: 46px;
+	gap: 47px;
 }
 
 .nav-link {
@@ -119,8 +127,6 @@ body {
 	text-align: center;
 	padding: 142px 0;
 }
-.container {
-}
 
 .breadcrumbs {
 	display: flex;
@@ -141,6 +147,8 @@ body {
 	font-size: 79px;
 	font-weight: 700;
 	text-transform: capitalize;
+	margin-top: 20px;
+	margin-bottom: 18px;
 }
 
 .hero-description {
@@ -167,4 +175,69 @@ body {
 
 .breadcrumbs-link:hover {
 	color: var(--accent-light);
+}
+
+/* Banner */
+
+.banner {
+	margin-top: 140px;
+}
+
+.banner-wrapper {
+	background-image: url(../img/banner.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding: 100px;
+}
+
+.banner-title {
+	font-family: var(--nunito-sans);
+	color: var(--light);
+	font-size: 60px;
+	font-weight: 900;
+	line-height: 1.26;
+	text-transform: uppercase;
+	margin-top: 0;
+	margin-bottom: 9px;
+}
+
+.banner-title span {
+	display: block;
+	max-width: 95px;
+	font-family: var(--open-sans);
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 1.28;
+	text-transform: uppercase;
+	text-align: center;
+	background-color: var(--accent-dark);
+	padding: 5px 0;
+	border-radius: 14px;
+	margin-bottom: 4px;
+}
+
+.banner-description {
+	max-width: 353px;
+	font-size: 15px;
+	line-height: 1.6;
+	color: rgba(var(--light-rgb), 0.8);
+	margin-top: 0px;
+	margin-bottom: 15px;
+}
+
+.banner-btn {
+	width: 170px;
+	background-color: var(--accent-light);
+	padding: 20px 10px;
+	border-radius: 5px;
+	font-family: var(--nunito-sans);
+	font-weight: 700;
+	font-size: 14px;
+	text-transform: uppercase;
+	text-align: center;
+	color: var(--dark);
+}
+
+.banner-btn:hover {
+	background-color: var(--accent-dark);
 }
