--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,16 @@ button {
 	border: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 0;
+	padding: 0;
+}
+
 :root {
 	--nunito-sans: "Nunito", sans-serif;
 	--open-sans: "Open Sans", sans-serif;
@@ -17,6 +27,7 @@ button {
 	--dark: #443737;
 	--light: #ffffff;
 	--light-rgb: 255, 255, 255;
+	--dark-rgba: 68, 55, 55;
 }
 body {
 	font-family: var(--open-sans);
@@ -118,6 +129,7 @@ body {
 }
 
 /* Hero */
+/* _______________________________________________________________________ */
 
 .hero {
 	background-image: url(../img/hero.jpg);
@@ -178,6 +190,7 @@ body {
 }
 
 /* Banner */
+/* ___________________________________________________________________ */
 
 .banner {
 	margin-top: 140px;
@@ -239,5 +252,102 @@ body {
 }
 
 .banner-btn:hover {
+	background-color: var(--accent-dark);
+}
+
+/* MENU */
+/* __________________________________________________________________________ */
+
+.menu {
+	font-family: var(--nunito-sans);
+	color: var(--dark);
+}
+
+.menu-header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-top: 100px;
+}
+.menu-title {
+	font-weight: 700;
+	font-size: 44px;
+	line-height: 127%;
+	text-transform: uppercase;
+}
+
+.menu-sorting {
+	font-family: var(--open-sans);
+	font-size: 15px;
+	line-height: 160%;
+	padding: 10px 26px;
+	border: 1px solid #dedede;
+	border-radius: 22px;
+	width: 279px;
+}
+.menu-box {
+	margin-top: 34px;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: auto;
+	gap: 50px 20px;
+}
+
+.menu-thumb {
+	height: 430px;
+	width: 100%;
+	position: relative;
+	overflow: hidden;
+}
+
+.menu-thumb img {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	object-fit: cover;
+}
+
+.menu-item {
+}
+
+.menu-name {
+	font-weight: 600;
+	font-size: 30px;
+	line-height: 127%;
+	text-align: center;
+	margin-top: 22px;
+}
+.price {
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 140%;
+	text-align: center;
+	color: rgba(var(--dark-rgba), 0.5);
+	margin-top: 5px;
+}
+.menu-btn::before {
+	content: "";
+	display: block;
+	background-image: url(../img/icon/cart-menu.svg);
+	background-repeat: no-repeat;
+	background-size: contain;
+	width: 18px;
+	height: 18px;
+	padding-right: 5px;
+}
+
+.menu-btn {
+	display: flex;
+	padding: 10px 30px 10px 29px;
+	margin: 0 auto;
+	border-radius: 5px;
+	background-color: var(--accent-light);
+	text-transform: uppercase;
+}
+
+.menu-btn:hover {
 	background-color: var(--accent-dark);
 }
