--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,8 @@ body {
 	width: 100%;
 	max-width: 1180px;
 	margin: 0 auto;
-	padding: 0 15px;
+	padding-left: 15px;
+	padding-right: 15px;
 }
 
 /* Header */
@@ -54,7 +55,8 @@ body {
 	display: flex;
 	align-items: center;
 	gap: 196px;
-	padding: 26px 0;
+	padding-top: 26px;
+	padding-bottom: 26px;
 }
 
 .logo {
@@ -63,11 +65,11 @@ body {
 	height: 56px;
 	background-image: url(../img/logo/logo.svg);
 	background-repeat: no-repeat;
-	background-size: contain;
+	background-size: cover;
 }
 
 .nav {
-	flex-grow: 1;
+	/* flex-grow: 1; */
 	display: flex;
 	gap: 47px;
 }
