--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,31 @@
-@media (max-width: 1160px) {
+@media (max-width: 1080px) {
+	.header-wrapper {
+		gap: 40px;
+	}
 	.nav {
 		margin-left: 0;
+		gap: min(3vw, 30px);
+	}
+}
+
+@media (max-width: 768px) {
+	.logo {
+		width: 150px;
+		height: 47.81px;
+	}
+	.header-wrapper {
+		gap: 45px;
+	}
+	.nav {
+		gap: 22px;
+	}
+	.banner {
+		margin-top: 72px;
+	}
+	.banner-wrapper {
+		padding: 100px 40px;
+	}
+	.menu-header {
+		margin-top: 80px;
 	}
 }
