--- a/css/media.css
+++ b/css/media.css
@@ -28,4 +28,40 @@
 	.menu-header {
 		margin-top: 80px;
 	}
+	.menu-box {
+		grid-template-columns: repeat(2, 1fr);
+	}
+	.menu-box._additionally {
+		grid-template-columns: repeat(1, 1fr);
+	}
+	.menu-item._additionally {
+		display: flex;
+		align-items: center;
+		gap: 20px;
+	}
+	.menu-item._additionally .menu-thumb {
+		flex-basis: calc(60% - 20px);
+		height: 260px;
+		margin-bottom: 0;
+	}
+	.menu-item._additionally .menu-info {
+		flex-basis: 40%;
+	}
+	.footer {
+		padding-top: 62px;
+		padding-bottom: 71px;
+	}
+	.footer-nav {
+		margin-bottom: 20px;
+	}
+	.footer-item:last-child {
+		display: none;
+	}
+	/* .footer-tel {
+		display: none;
+	} */
+	.footer-tel._mobile {
+		display: block;
+		text-align: left;
+	}
 }
